2003-06-10 Damien Sandras  <dsandras@seconix.com>

	* src/connection.cpp: Added callback to display a popup when the
	remote user is trying to transfer your call to another person
	and that it fails.
	
	* src/connection.h: See above.
	
	* src/endpoint.cpp: Fixed bug that prevented a call from being
	accepted after that the previous call has had failed transfer.
	(The calling party was receiving "Remote is busy" when it was not
	true).
	
	* src/gnomemeeting.cpp: Fixed crash when accepting a call, then
	trying to disconnect immediately after before the call has been
	established.
	
2003-06-09 Damien Sandras  <dsandras@seconix.com>

	* src/callbacks.cpp: Code cleanups.
	
	* src/endpoint.cpp: Updated to the new API of the calls history window
	functions.
	
	* src/gnomemeeting.cpp: Make use of the 2 new functions to animate
	the progress bar.
	
	* src/main_window.cpp, src/main_window.h: Added enw function to
	animate the progress bar in the statusbar when calling somebody.
	
	* src/tools.cpp, src/tools.h: Changed the API for the calls
	history window functions.
	
	* src/urlhandler.cpp: Added wrong speed dials and callto in the
	calls history. Fixed various bugs when calls fails.
	
2003-06-09 Damien Sandras  <dsandras@seconix.com>

	* src/callbacks.cpp: Fixed default button for call transfer popup.
	
	* src/endpoint.cpp, src/endpoint.h: Don't use the same mutexes 
	for all internal variables. Added a method that waits that a call
	has been transfered before returning.
	
	* src/menu.cpp: Fixed warning.
	
	* src/pref_window.cpp: Removed duplicate "Picture" entry.
	
2003-06-09 Damien Sandras  <dsandras@seconix.com>

	* src/callbacks.cpp: Improved the dialog in the transfer call
	popup.

	* src/endpoint.cpp: Fixed OpenAudioChannel.
	
	* src/gnomemeeting.cpp: Prevents crash when connection is NULL
	when clicking on Disconnect.

	* src/misc.cpp: HIGified the incoming call popup window.
	
2003-06-09 Damien Sandras  <dsandras@seconix.com>
